--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -84,12 +84,35 @@ header {
     justify-content: start;
     align-items: center;
 }
+
+.col {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+}
+
 .categorias label {
     margin-right: 25px;
     padding: 10px;
     text-align: center;
     font-size: 15px;
     font-weight: bold;
+}
+.check {
+    cursor: pointer;
+    background-color: #fff;
+    background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
+    width: 15px;
+    height: 15px;
+    appearance: none;
+    border: 2px solid #888;
+}
+
+.check:checked {
+    background-color: rgb(27, 35, 39);
+    transform: scale(1.8, 1.8);
+    transition: 500ms;
 }
 
 .buscador input {
@@ -121,19 +144,44 @@ header {
     align-items: center;
 }
 .card {
-    border: 1px solid #000;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.5);
+
     margin: 25px;
-    padding: 25px;
+    padding: 15px;
+}
+
+.card img {
+    width: 100%;
+    height: 200px;
+    border-radius: 5px;
+    margin-bottom: 25px;
+    object-fit: cover;
+
 }
 
 .card h2, .card p {
     text-align: center;
     margin: 5px;
 }
+
+.description {
+    width: 100%;
+    height: 80px;
+    overflow: hidden;
+}
+
 .extra {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    width: 100%;
     margin-top: 25px;
 }
 
@@ -142,7 +190,23 @@ header {
     font-weight: bold;
     padding: 5px;
     color: #000;
-    border: 1px solid #ccc;
+    border: 1px solid #000;
+    border-radius: 15px;
+}
+
+.past {
+    background-color: #ccc;
+}
+
+h3 {
+    width: 100%;
+    text-align: center;
+    border: 1px solid black;
+    background-color: red;
+}
+.extra p {
+    font-size: 15px;
+    font-weight: bold;
 }
 
 .extra a:hover {
@@ -322,7 +386,7 @@ td {
     width: 500px;
 }
 
-h2 {
+.h2-stats {
     width: 80%;
     background-color: #ccc;
     font-size: 35px;
@@ -359,6 +423,23 @@ h2 {
         width: 90%;
     }
 
+    .container-cards {
+        flex-direction: column;
+        width: 100%;
+    }
+    .card {
+        width: 90%;
+        flex-flow: column wrap;
+        justify-content: center;
+        align-items: center;
+    }
+    .card img {
+        width: 90%;
+    }
+
+    .description {
+        width: 100%;
+    }
     .banner {
         justify-content: center;
         align-items: center;
@@ -370,10 +451,48 @@ h2 {
     .banner a {
         font-size: 50px;
     }
+
+
+
     .categorias {
-        flex-direction: column;
+        flex-flow: row wrap;
+        justify-content: space-evenly;
+        align-items: center;
         margin-top: 15px;
+        width: 100%;
     }
+
+    .col {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .categorias label {
+        margin: 0;
+        padding: 0;
+        margin-bottom: 25px;
+        width: 100%;
+        font-style: italic;
+        font-weight: bold;
+
+    }
+
+    .check {
+            cursor: pointer;
+            background-color: #fff;
+            background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
+            width: 25px;
+            height: 25px;
+            appearance: none;
+            border: 2px solid #888;
+    }
+
+    .check:checked {
+        background-color: rgb(27, 35, 39);
+        transition: 500ms;
+      }
 
     footer {
         justify-content: center;
@@ -419,7 +538,7 @@ h2 {
         width: 100%;
         height: 50%;
     }
-    h2 {
+    .h2-stats {
         width: 100%;
         text-align: center;
         font-size: 25px;
