--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -175,6 +175,10 @@ header {
     padding: 15px;
 }
 
+.card:hover {
+    background-color: #6b6b6b;
+}
+
 .card img {
     width: 100%;
     height: 200px;
@@ -210,6 +214,22 @@ header {
     color: #000;
     border: 1px solid #000;
     border-radius: 15px;
+}
+
+.back {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: auto;
+    background: #5a5a5a;
+    padding: 5px;
+    border-radius: 100px;
+    margin-bottom: 15px;
+}
+
+.back:hover {
+    background-color: #000;
+    color: #fff;
 }
 
 .past {
@@ -395,17 +415,18 @@ textarea {
 
 table {
     width: 80%;
+    text-align: center;
 }
 
 td {
-    border: 1px solid black;
+    border-bottom: 1px solid black;
     padding: 5px;
     height: 30px;
     width: 500px;
 }
 
 .h2-stats {
-    width: 80%;
+    width: 100%;
     background-color: #ccc;
     font-size: 35px;
     margin-top: 25px;
@@ -415,17 +436,33 @@ td {
     font-weight: bold;
     font-size: 20px;
     text-align: center;
+    background-color: grey;
+}
+
+.tr-head:hover {
+    background-color: black;
+    color: #fff;
 }
 
 .hide {
     display:none;
 }
 
+.error {
+    object-fit: cover;
+    width: 85%;
+}
 
+.text-error {
+    color: red;
+}
 
+#table-stats {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
 
-
-
+}
 
 
 
